# maph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.cmd  build.sh  buildvs.sh  clean.cmd  clean.sh  test.sh  testvs.sh
.github/workflows/: main.yml
data/: example-0a.json  example-1a.json  example-2a.json  example-3a.json  example-4a.json  input_0.json  input_1.json  input_2.json  input_3.json
data/export_0/activities/: 2371002003.gpx  2372064692.gpx  2378093210.gpx  2380191447.gpx  2386433326.gpx  2391916524.gpx  2395797683.gpx  2401539435.gpx  2402182631.gpx  2404942733.gpx  2410245644.gpx  2415493270.gpx  2419976859.gpx  2421179470.gpx  2429389712.gpx  2433050789.gpx  2437752752.gpx  2442681686.gpx  2444067173.gpx  2445472946.gpx  2447915199.gpx  2451689629.gpx  2454738325.gpx  2461496292.gpx  2466909416.gpx  2475111512.gpx  2480447351.gpx  2485801766.gpx  2489795149.gpx  2492292646.gpx  2499132169.gpx  2503435538.gpx  2503528234.gpx  2508811198.gpx  2511799617.gpx  2512928810.gpx  2515901684.gpx  2517279791.gpx  2518702512.gpx  2520246033.gpx  (+79 more)
src/: colormap.h  constants.h  main.cpp  maph.h  sort.h  xml_helper.h
